# Plasma

./: .gitignore  CMakeLists.txt
backend/include/: OrderBook.hpp
backend/src/: OrderBook.cpp  main.cpp
cmake/: GenerateWindowsIcon.cmake  RefreshLogoTimestamps.cmake  WriteGhostRc.cmake
docs/: dom_widget_overview.md  ladder_design.md  ladder_troubleshooting.md
gui_native/: ClustersWidget.cpp  ClustersWidget.h  ConnectionStore.cpp  ConnectionStore.h  ConnectionsWindow.cpp  ConnectionsWindow.h  DomLevelsModel.cpp  DomLevelsModel.h  DomWidget.cpp  DomWidget.h  FinrezWindow.cpp  FinrezWindow.h  LadderClient.cpp  LadderClient.h  MainWindow.cpp  MainWindow.h  MainWindow_utf8.cpp  PluginsWindow.cpp  PrintsModel.cpp  PrintsModel.h  PrintsWidget.cpp  PrintsWidget.h  SettingsWindow.cpp  SettingsWindow.h  SymbolPickerDialog.cpp  SymbolPickerDialog.h  ThemeManager.cpp  ThemeManager.h  TradeManager.cpp  TradeManager.h  TradeTypes.h  TradesWindow.cpp  TradesWindow.h  ghost_icon.rc.in  gui_resources.qrc  main.cpp
gui_native/qml/: GpuClustersView.qml  GpuDomView.qml  GpuPrintsView.qml  SettingsAppearance.qml
gui_old/: app.py  plugins_window.py  settings_window.py  terminal_window.py
mods/: ladder_clicker.py
scripts/: make_windows_ico.py  run.py
